--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest -o"
+    "test": "jest -all"
   },
   "repository": {
     "type": "git",
